--- a/Taxi_Fare_Predictor_Durbin.ipynb
+++ b/Taxi_Fare_Predictor_Durbin.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "## Harry Durbin\n",
-    "## CE 263-Scalable Spatial Analytics, Fall 2015"
+    "## CE 263-Scalable Spatial Analytics"
    ]
   },
   {
@@ -36,7 +36,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Task 1: Predicting Taxi Fares"
+    "## Predicting Taxi Fares"
    ]
   },
   {
@@ -591,7 +591,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Task 2: Driver Advisory System"
+    "## Driver Advisory System"
    ]
   },
   {
