--- a/Taxi_Fare_Predictor_Durbin.ipynb
+++ b/Taxi_Fare_Predictor_Durbin.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "## Harry Durbin\n",
-    "## CE 263-Scalable Spatial Analytics"
+    "## Scalable Spatial Analytics"
    ]
   },
   {
